Updates per 7 October
Adding Images and stuffs

--- a/html5up-prologue/index.html
+++ b/html5up-prologue/index.html
@@ -12,11 +12,17 @@
 		<meta name="Description" content="Indonesian-born, Tokyo-based UI/UX Designer. Received her master degree at Media Design from Keio University, Japan, she's currently starting her career as designer at Tokyo. Also, a bachelor in Informatics. Talk nerd to her!">
 		<meta name="Keywords" content="Angelia, Stefani, Anchan, An, HCI, UI, UX, Human-Computer, Interaction, Designer, Developer, Artist, Programmer, Portfolio, Personal, Communication, Jakarta, Indonesia, Indonesian, Tokyo, Japan, Keio, KMD, Gaijin">
 		<meta name="author" content="Angelia Stefani">
+		<meta property="og:title" content="Angelia Stefanie, Interaction Designer" />
+		<meta property="og:description" content="Indonesian-born, Tokyo-based UI/UX Designer. Received her master degree at Media Design from Keio University, Japan, she's currently starting her career as designer at Tokyo. Also, a bachelor in Informatics. Talk nerd to her!"/>
+		<meta property="og:image" content="" />
+		<link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
+    	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+    	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://cdn.jsdelivr.net/fontawesome/4.1.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="http://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css"/>
-		<link rel="stylesheet" type ="text/css" href="assets/css/custombox.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 		<link href="http://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900italic,900" rel="stylesheet" type="text/css">
@@ -198,7 +204,6 @@
     			<div class="container">
 					</section>
 
-					
 
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
@@ -212,15 +217,28 @@
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
-									<article class="item" id="portfolio1">
-											<img src="images/tnt.jpg" width="420" height="286" class="image fit img-responsive"alt="TNT Adventure" /></a>
+									<article class="item">
+										<div class="hovereffect">
+											<a href="#" class="image fit">
+											<img src="images/tnt.jpg" width="420" height="286" class="img-responsive"alt="TNT Adventure" /></a>
+											<div class="overlay">
+												<p class="pic-title">Educational kinesthetic game, Tata and Taro Adventure (TNT Adventure), to help children aged 4 to 6 years old to explore the benefit of collaborations through game playing.
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
 											<h3>TnT Adventure</h3>
 										</header>
 										</article>
 									<article class="item">
+										<div class="hovereffect">
 											<a href="#" class="image fit">
-											<img src="images/tumblr.jpg" width="420" height="283" class="img-responsive"alt="Checkout Tumblr" /></a>
+											<img src="images/tumblr.png" width="420" height="283" class="img-responsive"alt="Checkout Tumblr" /></a>
+											<div class="overlay">
+												<p class="pic-title">Responsive Tumblr design for Rakuten ID payment engineer blog.
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
 											<h3>Tumblr Design</h3>
 										</header>
@@ -228,31 +246,55 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
+										<div class="hovereffect">
 											<a href="#" class="image fit">
 											<img src="images/blog.png" class="img-responsive" width="420" alt="AngelaHwang Blog" /></a>
+											<div class="overlay">
+												<p class="pic-title">A travel blog I designed for myself. Responsive web design based on wordpress. 
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
 											<h3>AngelaHwang Blog</h3>
 										</header>
 									</article>
 									<article class="item">
+										<div class="hovereffect">
 											<a href="#" class="image fit">
-											<img src="images/portal.jpg" width="420" height="235" class="img-responsive"alt="Checkout Portal" /></a>
+											<img src="images/portal.png" width="420" height="235" class="img-responsive"alt="Checkout Portal" /></a>
+											<div class="overlay">
+												<p class="pic-title">Rakuten ID payment LITE portal site. Changed the whole structure to support responsive design with HMTL, JS, and CSS
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
-											<h3>楽天ID決済Portal</h3>
+											<h3>Rakuten ID Payment Portal Site</h3>
 										</header>
 									</article>
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
+										<div class="hovereffect">
 											<a href="#" class="image fit">
-											<img src="images/manual.jpg" width="420" height="221" class="img-responsive"alt="Checkout Manual" /></a>
+											<img src="images/manual.png" width="420" height="221" class="img-responsive"alt="Checkout Manual" /></a>
+											<div class="overlay">
+												<p class="pic-title">Rakuten ID payment LITE manual site. Changed the whole structure to support responsive design with HMTL, JS, and CSS
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
-											<h3>楽天ID決済Manual</h3>
+											<h3>Rakuten ID Payment Manual Site</h3>
 										</header>
 									</article>
 									<article class="item">
+										<div class="hovereffect">
 											<a href="#" class="image fit">
 											<img src="images/pic07.jpg" class="img-responsive"alt="" /></a>
+											<div class="overlay">
+												<p class="pic-title">Playful button interaction with pure CSS (or JavaScript)
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
 										<header>
 											<h3>CSS Rigids</h3>
 										</header>
@@ -263,6 +305,67 @@
 						</div>
 					</section>
 
+				<!-- Projects and Publications -->
+				<section id ="project" class ="five">
+					<div class ="container">
+						<header>
+							<h2>Projects & Publications </h2>
+						</header>
+						<p>Selected projects and some publications I made.</p> 
+						<br>
+						<div class="row">
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<div class="hovereffect">
+											<a href="#" class="image fit">
+											<img src="images/pic07.jpg" width="420" height="286" class="img-responsive"alt="TNT Adventure" /></a>
+											<div class="overlay">
+												<p class="pic-title">
+													Playing and learning are part of children’s life. When children are asked what they like to do, they will answer without hesitation, to play. This project aims toencourage children to collaborate in the most natural way,through playing. Showcased in
+													Advance of Computer Entertainment (ACE) 2015. Iskandar, Malaysia
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
+										<header>
+											<h3>TnT Adventure - ACE 2015</h3>
+										</header>
+										</article>
+								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<div class="hovereffect">
+											<a href="#" class="image fit">
+											<img src="images/pic07.jpg" class="img-responsive" width="420" alt="AngelaHwang Blog" /></a>
+											<div class="overlay">
+												<p class="pic-title">
+													We use facial expression to communicate, and hide, our feelings. But how much do we fake, and how much is real.What happens when we cannot control the privacy of our emotions? Showcased in Augmented Human 2015, Singapore 
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
+										<header>
+											<h3>Truth? - Augmented Human 2015</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u$ 12u$(mobile)">
+									<article class="item">
+										<div class="hovereffect">
+											<a href="#" class="image fit">
+											<img src="images/pic07.jpg" width="420" height="221" class="img-responsive"alt="Checkout Manual" /></a>
+											<div class="overlay">
+												<p class="pic-title">An interactive movie experience where you can follow Alice to wonderland.
+												Keio Media Design, Japan.
+												<a class="info" href="#">Details coming soon</a></p>
+											</div>
+										</div>
+										<header>
+											<h3>Surreal Interactive Movie System (SIMS)</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+					</div>
+				</section>
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
@@ -271,9 +374,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<img class="image featured" src="images/pic08_angel.png" alt="" />
+							<a href="#" class="image featured"><img src="images/pic08_angel.png" alt="" /></a>
 
-							<p>Stefanie "An-chan" Angelia, she claim she was born 17 years ago in Jakarta, capital of Indonesia. She was raised in Indonesia until 2013, when she decided to set an adventure to Japan. When she's not at work, she's usually a traveller, photographer, bloger, and a sport enthustiac -usually in that order-. Does not bite hard, especially if you bring her food</p>
+							<p>Hello, I'm Angel! You can call me An-chan.I'm visually-oriented and I love making pretty things. When I'm not at work, I'm usually a traveller, photographer, video-editor, bloger, and a sport enthustiac -usually in that order-. I don't bite hard, especially if you bring me food</p>
 
 						</div>
 					</section>
@@ -283,10 +386,10 @@
 						<div class="container">
 
 							<header>
-								<h2>Say Hi to Angel!</h2>
+								<h2>I can help you!</h2>
 							</header>
 
-							<p>Feel free to send me a message if you need help with a project, want to discuss about anything, or if you just fancy saying hi to me! I'm also available for freelance and other opportunities.<br>
+							<p>I'm also available for freelance and other opportunities. Feel free to send me a message if you need help with a project, want to discuss about anything, or if you just fancy saying hi to me! <br>
 							</p>
 							<br>
 
@@ -322,23 +425,11 @@
 
 			</div>
 
-		<!-- Portfolio Modal --> 
-		<div id="modal" class="modal-demo">
-    		<button type="button" class="close" onclick="Custombox.close();">
-        	<span>&times;</span><span class="sr-only">Close</span>
-    		</button>
-    		<h4 class="title">Modal title</h4>
-    		<div class="text">
-        		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    		</div>
-		</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/modernizr.js"></script>
 			<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/custombox.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
