--- a/html5up-prologue/rmanual.html
+++ b/html5up-prologue/rmanual.html
@@ -79,12 +79,12 @@
 				<div class="container">
 					<h2>Overview</h2>
 					<h5>The site can be accessed <a rel="nofollow noreferrer" href="https://lite.checkout.rakuten.co.jp/manual">here</a></h5><br>
-					<p>My second project as UI/UX designer in Rakuten. Checkout LITE Manual is a manual page, dedicated for developer who's using Checkout LITE as one of their payment option <br><br>
-					It has several pages including API reference page (how to call the API), dashboard page (how to login into the dashboard a.k.a your personal page), and features (such as Sandbox and Security Code). <br>
+					<p>My second project as UI/UX designer in Rakuten. Checkout LITE Manual is a manual page, dedicated for developers who use Checkout LITE as one of their payment options <br><br>
+					It has several pages including a API reference page (how to call the API), a dashboard page (how to login into the dashboard a.k.a your personal page), and features (such as Sandbox and Security Code). <br>
 					<br>
-					The goal of this project is to redesign the whole pages so it can be viewed in desktop or in mobile without breaking the layout. As times goes by, several new pages are added in order to support a detailed explanation about the newer features to the user. 
+					The goal of this project was to redesign the pages so that they can be viewed in desktop or in mobile without breaking the layout. As times goes by, several new pages were added in order to provide detailed explanations on the newer features to users. 
 					<br><br>
-					I managed to improve the UI/UX score by 50% according to Google Page insight score. And in additional to that, I manage improve the page load speed to 100%.
+					I managed to improve the UI/UX score by 50% according to Google Page insight score. In addition to that, I also did manage improve the page load speed by 100%.
 					</p><br>
 					<img class="image featured" src="images/rmanual/manual_overview.jpg" alt="Manual overview" />
 				</div>
@@ -93,8 +93,8 @@
 			<section class="content three">
 				<div class="container">
 					<h2>The Challenge</h2>
-					<p>The challenging part of this project is similar as when I handling the portal design. The desktop version existed before the mobile version.<br><br>
-					The Dashboard and API pages is structured in 3-coloumn-page, where the leftmost side is for the navigation, the center part is for technical explanation, and the right side is for refrence (code snippet or pictures). Those two pages need to be reconstructed almost 50% because I need to change the grid to support the mobile version<br><br>
+					<p>The challenging part of this project is similar to when I was handling the portal design. The desktop version existed before the mobile version.<br><br>
+					The Dashboard and API pages was structured in 3-coloumn-page, where the leftmost section is for navigation, the center section is for technical explanation, and the rightmost section for refrence (code snippet or pictures). These two pages needed to be reconstructed almost entirely because I needed to change the grid to support the mobile version<br><br>
 					In additon to that, this manual page has 2 menus. One is a general menu to navigate to Checkout LITE related site, and another menu is to navigate within manual subpages. I tackled this problem by tailoring 2 side menus. 
 					</p><br>
 					<img class="image featured" src="images/rmanual/manual_nav.jpg" alt="Manual Navigation" />
