--- a/html5up-prologue/rportal.html
+++ b/html5up-prologue/rportal.html
@@ -79,13 +79,13 @@
 				<div class="container">
 					<h2>Overview</h2>
 					<h5>The site can be accessed <a rel="nofollow noreferrer" href="https://lite.checkout.rakuten.co.jp">here</a></h5><br>
-					<p>Checkout LITE is an innovative payment service from Rakuten. It was developed on 2015 and now it has hundreds of merchants and still counting. <br><br>
+					<p>Checkout LITE is an innovative payment service from Rakuten. It was developed in 2015 and now has hundreds of merchants and still counting. <br><br>
 					During my first 3 months in Rakuten, one of my job training is to develop the responsive version of the landing page. I also have to collaborate with other departmen to update the analytics code in the site.
 					<br>
 					<br>
 					The goal of this project is to redesign the whole pages so it can be viewed in desktop or in mobile without breaking the layout. 
 					<br><br>
-					I managed to improve the UI/UX score to 100%  according to Google Page insight score. This can be achieved by fixing the font size and tapable element size. And in additional to that, I manage improve the page load speed as well (achieved by compressing the stylesheet and script, and optimizing the image)
+					I managed to improve the UI/UX score to 100%  according to Google Page insight score. This can be achieved by fixing the font size and tapable element size. And in additional to that, I managed to improve the page load speed as well (achieved by compressing the stylesheet and script, and optimizing the images)
 					</p><br>
 					<img class="image featured" src="images/rportal/portal_overview.jpg" alt="Portal overview" />
 				</div>
@@ -95,10 +95,10 @@
 				<div class="container">
 					<h2>The Challenge</h2>
 					<p>The challenging part of this project is that the desktop version existed before the mobile version.<br><br>
-					While normally designer tailors the mobile screen version then slowly expand the screen size, I have to do the reverse desigining process for this project. 
+					While normally designer tailor the mobile screen version before slowly expanding the screen size, I have to do the reverse desigining process for this project. 
 					To tackle that problem, I communicated with the previous designer to learn the structure of the page.<br><br>
-					Major change that I made to the page is I add a navigation menu when the page is viewed in mobile version. <br>
-					The navigation menu consists of the sitemap and also two major actions which we recommend user to click it.I added these actions on the navigation so that user can easily gain the access to the respective pages and to improve the CTR. 
+					Major changes that I made to the page wass to add a navigation menu when the page is viewed in mobile version. <br>
+					The navigation menu consists of the sitemap and also two major actions which we recommend users to click. I added these actions on the navigation so that user can easily gain the access to the respective pages and to improve the CTR. 
 					</p><br>
 					<img class="image featured" src="images/rportal/portal_nav.jpg" alt="Portal Navigation" />
 				</div>
