--- a/html5up-prologue/rtumblr.html
+++ b/html5up-prologue/rtumblr.html
@@ -81,8 +81,8 @@
 					<h5>The site can be accessed <a rel="nofollow noreferrer" href="http://rakuten-id-payment.tumblr.com">here</a></h5><br>
 					<br>
 					<p>This tumblr blog is part of our feature which was released in early 2016. The purpose for this tumblr blog is to create a media where developers could get information about the newest features or any important information such as maintenance and so on.  <br><br>
-					There was some discussion about what kind of CMS should be use to achieve that goal. Some may say wordpress or blogspot. However, due to the limited time of the project, tumblr blog is chosen for its simplicity and ease of use. <br><br>
-					Based on the analytics tool, this site is doing well. I managed to achieve stable sessions (user sessions) every months since it was released. 
+					There was some discussion about what kind of CMS should be used to achieve that goal. Some may suggest wordpress or blogspot. However, due to the limited time of the project, tumblr blog is chosen for its simplicity and ease of use. <br><br>
+					Based on the analytics tool, this site is doing well. I managed to achieve stable sessions (user sessions) every month since it has been released. 
 					</p><br>
 					<img class="image featured" src="images/rtumblr/tumblr_overview.jpg" alt="Tumblr overview" />
 				</div>
@@ -93,8 +93,8 @@
 					<h2>The Challenge</h2>
 					<br>
 					<p>
-					One of the challenge on this project is tumblr theme is slightly different from the normal html. Tumblr is built around seven key post types: text, photos, links, quotes, chat, audio, and video, and each of them has slighly different parameters and customization, for example, picture post can't have a title and chat post need to be structured in data list. <br><br>
-					In addition to that, one of the requirement is to make the appearance does not look like tumblr basic style. It requires me to hide several features of tumblr such as like and reblog. I also need to create several script to hide tumblr iFrame.<br><br>
+					One of the challenge on this project is tumblr theme is slightly different from the normal html. Tumblr is built around seven key post types: text, photos, links, quotes, chat, audio, and video, and each of them has slighly different parameters and customization, for example, picture posts can't have a title and chat posts need to be structured in data list. <br><br>
+					In addition to that, one of the requirement was to make the appearance not look similar to the tumblr basic style. It requires me to hide several features of tumblr such as like and reblog. I also need to create several scripts to hide tumblr iFrame.<br><br>
 					I applied google anyaltics in this project because the internal analytics tool can't be used for 3rd party content provider.
 					</p><br>
 					<img class="image featured" src="images/rtumblr/tumblr_peek.jpg" alt="Tumblr Sneak-Peek" />
@@ -106,9 +106,9 @@
 					<h2>Responsive</h2>
 					<br>
 					<p>
-					I worked extra miles to create the tumblr blog responsive. It was not required in the project, but I think most people check social media with their phone and it would be very nice to have a clean look even in smart phone.
+					I went the extra mile to create the tumblr blog responsive. It was not required in the project, but I think most people check social media with their phones and it would be very nice to have a clean look from a smart phone.
 					<br><br>
-					Several javaScripts are use to achive that goal. By retrieving all the used tags, whenever user click a tag (in the sidebar or below the post title), the user will be redirected to all posts related with the tag. This will save users' time because they don't need to search for irrelevant words. <br><br>
+					JavaScript was use to achive that goal. By retrieving all the used tags, whenever user click a tag (in the sidebar or below the post title), the user will be redirected to all posts related with the tag. This will save users' time because they don't need to search for irrelevant words. <br><br>
 					</p><br>
 					<img class="image featured" src="images/rtumblr/tumblr_wap.jpg" alt="Tumblr Details" />
 				</div>
@@ -119,9 +119,9 @@
 					<h2>Details</h2>
 					<br>
 					<p>
-					There're several requirements that actually a little bit tricky to be implemented in tumblr. First is to retrieve the latest posts and second is to retrieve all the tags that had been used in the tumblr. 
+					There were several requirements that rather tricky to be implemented in tumblr. First was to retrieve the latest posts and second is to retrieve all the tags that had been used in the tumblr. 
 					<br><br>
-					Several javaScripts are use to achive that goal. By retrieving all the used tags, whenever user click a tag (in the sidebar or below the post title), the user will be redirected to all posts related with the tag. This will save users' time because they don't need to search for irrelevant words. <br><br>
+					Again JavaScript was required to achive that goal. By retrieving all the used tags, whenever a user clicks a tag (in the sidebar or below the post title), the user will be redirected to all posts related with the tag. This will save users' time because they don't need to search for irrelevant words. <br><br>
 					</p><br>
 					<img class="image featured" src="images/rtumblr/tumblr_details.jpg" alt="Tumblr Details" />
 				</div>
