--- a/html5up-prologue/truth.html
+++ b/html5up-prologue/truth.html
@@ -79,11 +79,11 @@
 				<div class="container">
 					<h2>Overview</h2>
 					<br>
-					<p>As technology advances, we will be able to gather more and more information about ourselves. We will also have less choice as to what information remains private. This project is a social experiment, exploring the result of forced augmentation. <br><br>
+					<p>As technology advances, we will be able to gather more and more information about ourselves. We will also have less choices as to what information remains private. This project is a social experiment, exploring the result of forced augmentation. <br><br>
 
-					We use facial expression to communicate, and hide, our feelings. But how much do we fake, and how much is real. We say things like “I’m excited!” when we aren’t. Are we even aware of how sincere/insincere we really are? What happens when we cannot control the privacy of our emotions? <br> <br>
+					We use facial expression to communicate, and hide, our feelings. But how much do we fake, and how much is real? We say things like “I’m excited!” when we aren’t. Are we even aware of how sincere/insincere we really are? What happens when we cannot control the privacy of our emotions? <br> <br>
  
-					We propose to replace the top half of a user's face with an artificial digital version that changes expression according to heartbeat. When people wear this augmentation, will they start being more honest? Or will people still try to hide their emotions, creating weird situations where the top artificial half of a person's face shows nervousness/excitement, while the bottom real half tries to act cool.  
+					We proposed to replace the top half of a user's face with an artificial digital version that changes expression according to heartbeat. When people wear this augmentation, will they start being more honest? Or will people still try to hide their emotions, creating weird situations where the top artificial half of a person's face shows nervousness/excitement, while the bottom real half tries to act cool.  
 					</p><br>
 				</div>
 			</section>
